EIX-23296: Fixed CKEditor border not showing in Arabic when launched from reporting framework.

--- a/src/main/javascript/skins/halogen/editor_iequirks.css
+++ b/src/main/javascript/skins/halogen/editor_iequirks.css
@@ -15,10 +15,13 @@ in Quirks mode only.
 @import url("editor_ie.css");
 
 .cke_top,
-.cke_contents,
 .cke_bottom
 {
 	width: 100%; /* hasLayout = true */
+}
+
+.cke_contents {
+	width: auto
 }
 
 .cke_button_arrow
